TAG: qcreports_db-3-5-4-5
DATE: 08/13/2007
STAFF: dbm
CHANGES:
1) TR8442 - changed ALL_MolNotesNoMP.py to exclude rows with only J:94077
2) TR8440 - changed BIB_RefsToIndex.py to remove Alleles & Phenotypes and
            Tumor columns from report

TAG: qcreports_db-3-5-4-4
DATE: 08/10/2007
STAFF: dbm
CHANGES:
1) TR8394 - added GXD_RefNoTitle.py and link from qcr.html

TAG: qcreports_db-3-5-4-3
DATE: 08/08/2007
STAFF: dbm
CHANGES:
1) TR8435 - changed ALL_MolNotesNoMP.py to exclude rows with only J:94338

TAG: qcreports_db-3-5-4-2
DATE: 08/03/2007
STAFF: dbm
CHANGES:
1) TR8368 - changed to make it exclude papers with cDNA and/or primer
            extension assay types

TAG: qcreports_db-3-5-4-1
DATE: 07/26/2007
STAFF: dbm
CHANGES:
1) TR8368 - added GXD_OneGenePapers.py and link from qcr.html

TAG: qcreports_db-3-5-3-18
DATE: 07/20/2007
STAFF: sc
CHANGES:
1) TR8382 - add MRK_GORCA.py and link from qcr.html

TAG: qcreports_db-3-5-3-17
DATE: 07/13/2007
STAFF: sc
CHANGES: 
1) TR8359 - add to GXD_ProbeAntibody.sql

TAG: qcreports_db-3-5-3-16
DATE: 07/09/2007
STAFF: sc
CHANGES: TR8349
1) Updated GXD_FullCode.py to reorganize these reports
2) Updated qcr.html accordingly

TAG: qcreports_db-3-5-3-15
DATE: 06/20/2007
STAFF: dbm
CHANGES:
1) Added BIB_RefsToIndex.py (TR8343)
2) Updated qcr.html with a link to the new report

TAG: qcreports_db-3-5-3-14
DATE: 06/19/2007
STAFF: dbm
CHANGES:
1) Change sort column to be creation_date on MRK_Alleles.sql (TR8351)

TAG: qcreports_db-3-5-3-13
DATE: 06/18/2007
STAFF: dbm
CHANGES:
1) Added GXD_EarlyPapers.py (TR8343)
2) Updated qcr.html with a link to the new report

TAG: qcreports_db-3-5-3-12
DATE: 06/12/2007
STAFF: 
CHANGES:
1) added - mgd/MGI_GenesAndPseudogenesWithSequence.py
2) updated qcr.html with above

TAG: qcreports_db-3-5-3-11
DATE: 06/08/2007
STAFF: dbm
CHANGES:
1) Remove the first 2 reports from GXD_SpecNoAge.py (TR8339)

TAG: qcreports_db-3-5-3-10
DATE: 06/07/2007
STAFF: dbm
CHANGES: