@@ -135,7 +135,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_WithdrawnMarker.rpt">Withdrawn markers with GXD data</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_Stats.rpt">GXD Statistics</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecNoAge.sql.rpt">Specimens with incorrect age/age range values</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecTheiler.sql.rpt">Specimens annotated to structures of > 1 Theiler Stage</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecTheiler.sql.rpt">Specimens annotated to structures of > 1 Theiler Stage or Sex</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecTheilerAge.rpt">GXD Specimens with incompatible Theiler stages and ages</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_MechDev.rpt">Mech Dev papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GeneExprPatternsandBrainResGeneExprPatterns.rpt">Gene Expr Patterns papers to full code</A>
